objects/BMCServiceDesk__ScanConfigurationProtocol__c.object
<CustomObject>
    <description>Stores the protocols configured for each scan configuration.</description>
    <fields>
        <fullName>BMCServiceDesk__FKScanConfiguration__c</fullName>
        <description>To store the reference of the scan configuration with which the protocol is associated.</description>
        <label>Scan Configuration</label>
        <referenceTo>BMCServiceDesk__ScanConfiguration__c</referenceTo>
        <relationshipLabel>Scan Configuration Protocols</relationshipLabel>
        <relationshipName>ScanConfigurationProtocols</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the protocol is active for the scan configuration or not.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProtocolLabel__c</fullName>
        <formula>CASE( BMCServiceDesk__ProtocolName__c,&apos;SMB&apos;, $Label.BMCServiceDesk__SMBProtocol , &apos;SSH&apos;, $Label.BMCServiceDesk__SSHProtocol, &apos;SNMP&apos;,$Label.BMCServiceDesk__SNMPProtocol, &apos;VMWARE&apos;, $Label.BMCServiceDesk__VMWAREProtocol, &apos;HYPERV&apos;, $Label.BMCServiceDesk__HyperVProtocol,$Label.BMCServiceDesk__PSATNotApplicable)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Protocol Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProtocolName__c</fullName>
        <description>To store the name of the protocol.</description>
        <label>Protocol Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Scan Configuration Protocol</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Configuration Protocols</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>